# web-scraping

./: README.md  pyproject.toml  scraper.py
