[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["Glenn Elliron Clark <Elliron.Clark@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.7b0"
beautifulsoup4 = "^4.9.3"
requests = "^2.26.0"
bs4 = "^0.0.1"
prettify = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
